--- a/index.html
+++ b/index.html
@@ -6,32 +6,35 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" type="text/javascript"></script>
+    <title>Movie Tickets</title>
   </head>
   <body>
     <h1>Movie Tickets Reservation System</h1>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <form id="add-place" class="form-group">
+          <form id="formId" class="form-group">
 
             <select class="form-control" id="movieName">
               <option value="1">Titanic</option>
-              <option value="2">Babe</option>
-              <option value="3">The Nun</option>
-              <option value="4">Venom</option>
+              <option value="1">Babe</option>
+              <option value="2">The Nun</option>
+              <option value="2">Venom</option>
             </select>
 
-            <select class="form-control" id="movieName">
+            <select class="form-control" id="movieTime">
               <option value="1">11 am</option>
               <option value="2">1 pm</option>
               <option value="3">5 pm</option>
               <option value="4">8 pm</option>
             </select>
 
-          <label for="age" >Dates Visited</label>
-          <input type="text" id="age" class="form-control">
+            <select class="form-control" id="age">
+              <option value="1">Over 65 years old</option>
+              <option value="2">Under 65 Years Old</option>
+            </select>
 
-          <button type="submit">Get Your Ticket !!</button>
+            <button type="submit">Get Your Ticket !!</button>
           </form>
         </div>
 
@@ -39,4 +42,4 @@
 
     </div>
   </body>
-</html>
+  </html>
