show result ticket price

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
           <form id="formId" class="form-group">
 
             <select class="form-control" id="movieName">
-              <option value="1">Titanic</option>
-              <option value="1">Babe</option>
-              <option value="2">The Nun</option>
-              <option value="2">Venom</option>
+              <option value="8">Titanic</option>
+              <option value="8">Babe</option>
+              <option value="12">The Nun</option>
+              <option value="12">Venom</option>
             </select>
 
             <select class="form-control" id="movieTime">
               <option value="1">11 am</option>
-              <option value="2">1 pm</option>
+              <option value="1">1 pm</option>
               <option value="3">5 pm</option>
-              <option value="4">8 pm</option>
+              <option value="3">8 pm</option>
             </select>
 
             <select class="form-control" id="age">
@@ -39,7 +39,10 @@
         </div>
 
       </div>
+<div class="ticketPrice">
+  <p>Your ticket(s) cost: <span id="price"></span></p>
 
+</div>
     </div>
   </body>
   </html>
